syntax = "proto3";

package com.evernym.verity.actor.agent;

message MsgOrders {
    int32 senderOrder = 1;
    map<string, int32> receivedOrders = 2;
}